--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -13,7 +13,7 @@ build = 'build.rs'
 targets = ['x86_64-unknown-linux-gnu']
 
 [build-dependencies]
-substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
+substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 
 [[bin]]
 name = 'kpron-node'
@@ -36,58 +36,58 @@ jsonrpc-core = '15.1.0'
 kpron-runtime = { path = '../runtime' }
 
 # Substrate Dependencies
-frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
+frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 
-pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
+pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 
-substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "master" }
 
 ## Substrate Client Dependencies
-sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sc-chain-spec = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sc-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sc-client-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sc-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sc-executor = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sc-network = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sc-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sc-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sc-rpc-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sc-service = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.2", version = '0.9.0', features = ['wasmtime'] }
-sc-telemetry = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sc-tracing = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
+sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-chain-spec = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-client-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-executor = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-network = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-rpc-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-service = { git = 'https://github.com/paritytech/substrate.git', branch = "master", version = '0.9.0', features = ['wasmtime'] }
+sc-telemetry = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-tracing = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 
 ## Substrate Primitive Dependencies
-sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sp-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sp-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sp-offchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sp-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sp-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
-sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.2' }
+sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-offchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 
 # Cumulus dependencies
-cumulus-client-consensus-aura = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.2' }
-cumulus-client-consensus-common = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.2' }
-cumulus-client-collator = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.2' }
-cumulus-client-cli = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.2' }
-cumulus-client-network = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.2' }
-cumulus-client-service = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.2' }
-cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.2' }
-cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.2' }
+cumulus-client-consensus-aura = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+cumulus-client-consensus-common = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+cumulus-client-collator = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+cumulus-client-cli = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+cumulus-client-network = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+cumulus-client-service = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
 
 # Polkadot dependencies
-polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.2'}
-polkadot-service = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.2'}
-polkadot-cli = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.2'}
-polkadot-test-service = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.2'}
-polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.2'}
+polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', branch = 'master'}
+polkadot-service = { git = 'https://github.com/paritytech/polkadot', branch = 'master'}
+polkadot-cli = { git = 'https://github.com/paritytech/polkadot', branch = 'master'}
+polkadot-test-service = { git = 'https://github.com/paritytech/polkadot', branch = 'master'}
+polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'master'}
