--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -84,6 +84,7 @@ cumulus-client-network = { git = 'https://github.com/paritytech/cumulus.git', br
 cumulus-client-service = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
 cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
 cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+statemint-common = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master', default-features = false }
 
 # Polkadot dependencies
 polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', branch = 'master'}
